Add email and phone to social icon section

--- a/src/index.html
+++ b/src/index.html
@@ -122,6 +122,16 @@
                                 <span class="fab fa-telegram-plane" aria-label="Telegram"></span>
                             </a>
                         </li>
+                        <li>
+                            <a href="mailto:nick@nickm.dev" title="Email">
+                                <span class="fas fa-envelope" aria-label="Email"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="tel:(218) 451-2008" title="Phone">
+                                <span class="fas fa-phone" arial-label="Phone"></span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
