Update src/index.html - Add Fasetto to work experience

--- a/src/index.html
+++ b/src/index.html
@@ -150,13 +150,23 @@
                 </div>
                 <div class="experience-items">
                     <div class="experience-item">
+                        <h3 class="item-title">Senior Web Developer</h3>
+                        <h4 class="item-subtitle">Fasetto</h4>
+                        <p class="item-description">Working on corporate websites as changes and updates are required. Redesigning websites to align with corporate branding. Working on front-end interface of Fasetto's primary (web-based) software product using various technologies.</p>
+                        <div class="item-dates">
+                            <span class="start">May 2019</span>
+                            <span> - </span>
+                            <span class="end">Present</span>
+                        </div>
+                    </div>
+                    <div class="experience-item">
                         <h3 class="item-title">Senior Website Developer</h3>
                         <h4 class="item-subtitle">ARI Network Services</h4>
                         <p class="item-description">Continuing to work with the Website R&amp;D team as a lead developer. Lead the team with ideas and execute on those ideas in a timely fashion. Continue providing new features and functionality for websites using the proprietary platform, and ensure that sites are using modern technologies and design practices.</p>
                         <div class="item-dates">
                             <span class="start">March 2019</span>
                             <span> - </span>
-                            <span class="end">Present</span>
+                            <span class="end">May 2019</span>
                         </div>
                     </div>
                     <div class="experience-item">
