--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>personal-website</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but personal-website doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <meta name="description" content="Nick Mykkanen is a website developer and software engineer in Duluth, Minnesota">
+        <meta name="author" content="Nick Mykkanen">
+        <meta name="robots" content="index, follow">
+        <link rel="canonical" href="https://nickm.dev">
+
+        <title>Nick Mykkanen</title>
+
+        <link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="194x194" href="/img/favicons/favicon-194x194.png">
+        <link rel="icon" type="image/png" sizes="192x192" href="/img/favicons/android-chrome-192x192.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16x16.png">
+        <link rel="manifest" href="/img/favicons/site.webmanifest">
+        <link rel="mask-icon" href="/img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="shortcut" href="<%= BASE_URL %>favicon.ico">
+        <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+        <meta name="apple-mobile-web-app-title" content="Nick Mykkanen">
+        <meta name="application-name" content="Nick Mykkanen">
+        <meta name="msapplication-TileColor" content="#f0f0f0">
+        <meta name="msapplication-config" content="/img/favicons/browserconfig.xml">
+        <meta name="theme-color" content="#f0f0f0">
+
+    </head>
+    
+    <body>
+        <noscript>
+            <strong>The website you are attemting to visit requires JavaScript. Please enable JavaScript to continue. I apologize for any inconvenience this may have caused.</strong>
+        </noscript>
+        <div id="app"></div>
+        <!-- built files will be auto injected -->
+    </body>
+
 </html>
