--- a/public/index.html
+++ b/public/index.html
@@ -11,19 +11,19 @@
 
         <title>Nick Mykkanen</title>
 
-        <link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="194x194" href="/img/favicons/favicon-194x194.png">
-        <link rel="icon" type="image/png" sizes="192x192" href="/img/favicons/android-chrome-192x192.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16x16.png">
-        <link rel="manifest" href="/img/favicons/site.webmanifest">
-        <link rel="mask-icon" href="/img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="194x194" href="/img/icons/favicon-194x194.png">
+        <link rel="icon" type="image/png" sizes="192x192" href="/img/icons/android-chrome-192x192.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png">
+        <link rel="manifest" href="/img/icons/site.webmanifest">
+        <link rel="mask-icon" href="/img/icons/safari-pinned-tab.svg" color="#5bbad5">
         <link rel="shortcut" href="<%= BASE_URL %>favicon.ico">
         <link rel="icon" href="<%= BASE_URL %>favicon.ico">
         <meta name="apple-mobile-web-app-title" content="Nick Mykkanen">
         <meta name="application-name" content="Nick Mykkanen">
         <meta name="msapplication-TileColor" content="#f0f0f0">
-        <meta name="msapplication-config" content="/img/favicons/browserconfig.xml">
+        <meta name="msapplication-config" content="/img/icons/browserconfig.xml">
         <meta name="theme-color" content="#f0f0f0">
 
     </head>
