--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
     </head>
     
-    <body data-spy="scroll" data-target=".navbar" data-offset="50" id="page-top">
+    <body>
         <noscript>
             <strong>The website you are attemting to visit requires JavaScript. Please enable JavaScript to continue. I apologize for any inconvenience this may have caused.</strong>
         </noscript>
